enable python remote execution

--- a/profiling_project/Config/DefaultEngine.ini
+++ b/profiling_project/Config/DefaultEngine.ini
@@ -43,3 +43,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/PythonScriptPlugin.PythonScriptPluginSettings]
+bRemoteExecution=True
+
