--- a/profiling_project/Plugins/Profiling/Profiling.uplugin
+++ b/profiling_project/Plugins/Profiling/Profiling.uplugin
@@ -17,7 +17,7 @@
 	"Modules": [
 		{
 			"Name": "Profiling",
-			"Type": "Runtime",
+			"Type": "Editor",
 			"LoadingPhase": "PreLoadingScreen"
 		}
 	]
